--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "npm run build"
+  command = "CI= npm run build"
   publish = "out"
 
 [build.environment]
-  NODE_VERSION = "22"
+  NODE_VERSION = "20.18"
 
 [[redirects]]
   from = "/*"
