Use cross-platform compatible path to TypeScript binary

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run type-check && next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "./node_modules/.bin/tsc --noEmit"
+    "type-check": "node_modules/.bin/tsc --noEmit"
   },
   "dependencies": {
     "@whop/api": "^0.0.51",
