Fix Netlify dependency caching issues by simplifying build process and using Node.js 18.18.0

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "npm ci && CI= npm run build"
+  command = "CI= npm run build"
   publish = "out"
 
 [build.environment]
-  NODE_VERSION = "22.0.0"
+  NODE_VERSION = "18.18.0"
 
 [[redirects]]
   from = "/*"
