--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-  command = "CI= npm run build"
+  command = "npm install && npm run build"
   publish = "out"
 
 [build.environment]
   NODE_VERSION = "18.18.0"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
