--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npm run build"
+  command = "npm install && npm install --save-dev typescript @types/react @types/node @types/react-dom && npm run build"
   publish = "out"
 
 [build.environment]
