--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "npm install && npm install --save-dev typescript @types/react @types/node @types/react-dom && npm run build"
+  command = "npm install && npm run build"
   publish = "out"
 
 [build.environment]
-  NODE_VERSION = "18.18.0"
+  NODE_VERSION = "22.0.0"
 
 [[redirects]]
   from = "/*"
