--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "rm -rf node_modules && npm install && npm run build"
+  command = "./build.sh"
   publish = "out"
 
 [build.environment]
