--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npm run build"
+  command = "rm -rf node_modules package-lock.json && npm install --force && npm run build"
   publish = "out"
 
 [build.environment]
