--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build]
-  command = "rm -rf node_modules package-lock.json && npm install --force && npm run build"
+  command = "./build.sh"
   publish = "out"
 
 [build.environment]
   NODE_VERSION = "22.0.0"
+  NODE_ENV = "production"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
