--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,28 @@
 [build]
-  command = "./build.sh"
+  command = "npm install && npm run build"
   publish = "out"
 
 [build.environment]
   NODE_VERSION = "22.0.0"
   NODE_ENV = "production"
   CI = "false"
+
+[build.processing]
+  skip_processing = true
+
+[build.processing.css]
+  bundle = false
+  minify = false
+
+[build.processing.js]
+  bundle = false
+  minify = false
+
+[build.processing.html]
+  pretty_urls = false
+
+[build.processing.images]
+  compress = false
 
 [[redirects]]
   from = "/*"
