--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
   },
   "dependencies": {
     "@whop/api": "^0.0.51",
-    "lucide-react": "^0.294.0",
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
     "@types/node": "^20.19.19",
     "@types/react": "^18.3.25",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.0",
     "postcss": "^8.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
-  }
+  },
+  "devDependencies": {}
 }
