Fix netlify.toml syntax error - remove invalid plugins configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -25,9 +25,7 @@
 [build.processing.images]
   compress = false
 
-# Disable all plugins
-[plugins]
-  disabled = true
+# No plugins configured
 
 [[redirects]]
   from = "/*"
