--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "type-check": "npx --prefer-offline tsc --noEmit"
   },
   "dependencies": {
-    "@whop/api": "^0.0.51",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20.19.19",
     "@types/react": "^18.3.25",
     "@types/react-dom": "^18.3.7",
+    "@whop/api": "^0.0.51",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
@@ -24,6 +25,5 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
-  },
-  "devDependencies": {}
+  }
 }
